--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-messenger-plugin": "^1.0.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "underscore": "^1.8.3"
