--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4567"
+  "proxy": "http://signal.ngrok.io"
 }
